# neuromatch

./: README.md  main.py  neural_models_with_nengo.ipynb  neural_switching_observer.ipynb  pyproject.toml  requirements.txt  w1d3.ipynb  w1d5.ipynb  w2d4.ipynb  w3d1.ipynb  w3d2.ipynb  w3d3.ipynb  workshop1.ipynb
.github/workflows/: ci.yml
computational_neuroscience/: laquitaine.ipynb  neural_models_with_nengo.ipynb  w1d1.ipynb  w1d2.ipynb  w1d4.ipynb  w2d2.ipynb  w2d3.ipynb  w3d4.ipynb  w3d5.ipynb
computational_neuroscience/refresher/: calculus.ipynb
deeplearning/: w1d1.ipynb
refresher/: linearalgebra.ipynb  workshop1.ipynb
