[project]
name = "neuromatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "setuptools>=80.9.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
